--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -69,6 +69,15 @@ web_modules/
 .env
 .env.*
 !.env.example
+
+# Uploads and media files
+uploads/
+src/uploads/
+*.PNG
+*.JPG
+*.JPEG
+*.GIF
+*.WEBP
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
